# morpheus

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: client.rs  endpoints.rs  main.rs  message.rs  raw.rs  raw_data.rs  rest_client.rs  user.rs
src/client/: client.rs  message.rs  mod.rs  room.rs  user.rs
src/rest/: client.rs  endpoints.rs  mod.rs
src/rest/events/: encryption.rs  event.rs  message.rs  mod.rs  notifs.rs  room.rs  sync.rs
src/rest/reqs/: mod.rs  send_message.rs  sync.rs
